[gd_scene load_steps=13 format=3 uid="uid://bnjkg0t31f7xm"]

[ext_resource type="Script" path="res://screens/activities/03/tasks/pronun_bee.gd" id="1_ocn7n"]
[ext_resource type="PackedScene" uid="uid://jriwlk872m4b" path="res://components/confetti_effect.tscn" id="2_cwhpa"]
[ext_resource type="Texture2D" uid="uid://befh6g35ofksd" path="res://assets/images/bee.webp" id="3_jfv0w"]
[ext_resource type="FontFile" uid="uid://cogryc0bfmmla" path="res://assets/fonts/Poppins-SemiBold.ttf" id="4_35bme"]
[ext_resource type="PackedScene" uid="uid://c8kqfmnhflg6m" path="res://components/record_button.tscn" id="5_1cjhu"]
[ext_resource type="Script" path="res://scripts/prediction_component.gd" id="6_mfitu"]
[ext_resource type="AudioStream" uid="uid://doirdvttjaoqp" path="res://assets/voices/statements/manten_presionado_pronuncia.mp3" id="7_okm3o"]
[ext_resource type="AudioStream" uid="uid://d286aso6yqdjj" path="res://assets/voices/words/abeja.mp3" id="8_bifee"]

[sub_resource type="Animation" id="Animation_6tivj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContainerCenter/HBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContainerCenter/HBoxContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContainerButton/RecordButton:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ContainerButton/RecordButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ContainerCenter/HBoxContainer/Word/Letter:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dooj1"]
resource_name = "intro"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContainerCenter/HBoxContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.297302, 0.258816),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContainerCenter/HBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.287175),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContainerButton/RecordButton:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.307786, 0.378929),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ContainerButton/RecordButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.329877, 0.482968),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0ef6d"]
resource_name = "outro"
length = 4.4
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Narrator")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_okm3o")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_bifee")
}],
"times": PackedFloat32Array(0.5, 3.4)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContainerCenter/HBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.31864, 0.329877),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContainerCenter/HBoxContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.287175, 0.329877),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ContainerButton/RecordButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(0.450625, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ContainerButton/RecordButton:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 1, 1.4, 1.6, 4.2, 4.4),
"transitions": PackedFloat32Array(0.277393, 1, 0.535887, 0.366021, 0.406126, 0.378929),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1), Vector2(1, 1), Vector2(0.8, 0.8), Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ContainerCenter/HBoxContainer/Word/Letter:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.4, 3.9, 4.1),
"transitions": PackedFloat32Array(1, 0.353554, 0.277392, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(4.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_interactions"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n41vr"]
_data = {
"RESET": SubResource("Animation_6tivj"),
"intro": SubResource("Animation_0ef6d"),
"outro": SubResource("Animation_dooj1")
}

[node name="PronunBee" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ocn7n")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContainerCenter" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -640.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="ContainerCenter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.5
offset_top = -297.0
offset_right = 297.5
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(297, 183)
theme_override_constants/separation = 10

[node name="ConfettiEffect" parent="ContainerCenter/HBoxContainer" instance=ExtResource("2_cwhpa")]
position = Vector2(295.5, 138)

[node name="Bee" type="TextureRect" parent="ContainerCenter/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_jfv0w")
stretch_mode = 5

[node name="Word" type="Control" parent="ContainerCenter/HBoxContainer"]
custom_minimum_size = Vector2(0, 144)
layout_mode = 2

[node name="Letter" type="Label" parent="ContainerCenter/HBoxContainer/Word"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -79.5
offset_right = -91.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(39, 79)
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("4_35bme")
theme_override_font_sizes/font_size = 111
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="ContainerCenter/HBoxContainer/Word"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -79.5
offset_right = 168.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("4_35bme")
theme_override_font_sizes/font_size = 111
text = "beja"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContainerButton" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -613.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(360, 333)

[node name="RecordButton" parent="ContainerButton" instance=ExtResource("5_1cjhu")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
max_duration = 4.0

[node name="PredictionComponent" type="HTTPRequest" parent="."]
script = ExtResource("6_mfitu")
endpoint = "word/a"

[node name="TaskAnimator" type="AnimationPlayer" parent="."]
autoplay = "intro"
libraries = {
"": SubResource("AnimationLibrary_n41vr")
}

[node name="Narrator" type="AudioStreamPlayer" parent="."]
volume_db = 5.0
bus = &"Narrator"

[connection signal="finished" from="ContainerCenter/HBoxContainer/ConfettiEffect" to="." method="_on_confetti_effect_finished"]
[connection signal="fail" from="ContainerButton/RecordButton" to="." method="_on_record_button_fail"]
[connection signal="finished" from="ContainerButton/RecordButton" to="." method="_on_record_button_finished"]
[connection signal="pressed" from="ContainerButton/RecordButton" to="." method="_on_record_button_pressed"]
